# mesmusicuserbot

UserBot_Backup_20250707_003942/: README.md  main.py  pyproject.toml  requirements.txt
UserBot_Backup_20250707_003942/Menim_JSON_fayillarim/: bot_logs.json  error_log.txt  group_activation_settings.json  link_filter_settings.json  locked_stickers.json  logs_storage.json  media_log.json  memory.json  music_queue.json  profanity_settings.json  qVGiK6h61S8.json  sticker_allowed_users.json  sticker_blocker_settings.json
UserBot_Backup_20250707_003942/Menim_PY_modullarim/: __init__.py  activation_middleware.py  ai_commands.py  automatic_functions.py  cleanup_old_folders.py  common_utils.py  cosmic_commands.py  create_module.py  entertainment_commands.py  error_handler.py  file_manager.py  group_activation.py  link_filter.py  log_server.py  music_player.py  organize_files.py  profanity_filter.py  profile_commands.py  sticker_blocker.py  suggestion_commands.py  system_commands.py  tag_commands.py  web_checker.py  zip_creator.py
UserBot_Backup_20250707_003942/Menim_SESSION_fayillarim/: userbot_session.session  userbot_session.session-journal
